<resources>
    <string name="app_name">NailApptApp</string>
    <string name="signin">Bejelentkezés</string>
    <string name="email">Email</string>
    <string name="signup">Regisztráció</string>
    <string name="password">Jelszó</string>
    <string name="pwdagain">Jelszó megerősítése</string>
    <string name="surname">Vezetéknév</string>
    <string name="firstname">Keresztnév</string>
    <string name="phoneNum">Telefonszám</string>
    <string name="or">vagy</string>
    <string name="loginWithGoogle">Bejelentkezés Google fiókkal</string>
    <string name="continueAsGuest">Folytatás vendégként</string>
    <string name="pink_banner">Pink banner</string>
    <string name="welcome">Üdvözöljük!</string>
    <string name="back">Back</string>
    <string name="nail_polish_icon">nail polish icon</string>
    <string name="tbc">Folytatás a 2. mérföldkőben…</string>
    <string name="home">Főoldal</string>
    <string name="reserved_appointments">Lefoglalt időpontok</string>
    <string name="addappointment">Időpont hirdetése</string>
    <string name="postedappointments">Meghirdetett időpontok</string>
    <string name="advertise">Hirdetéseim</string>
    <string name="profile">Profil</string>
    <string name="chooseday">Válassz egy napot!</string>
    <string name="freeappointments">Szabad időpontok</string>
    <string name="addad">Hirdetés létrehozása</string>
    <string name="newadvert">Új hirdetés</string>
    <string name="date">Dátum</string>
    <string name="time">Időpont</string>
    <string name="address1">Cím1 (város, falu, község stb.)</string>
    <string name="address2">Cím2 (utca, házszám)</string>
    <string name="postcode">Irányítószám</string>
    <string name="add">Létrehozás</string>
    <string name="othercontact">Egyéb kapcsolat (pl: instagram)</string>
    <string name="reservation">Foglalás</string>
    <string name="bookedBy">Lefoglalta: </string>
    <string name="name">Név: </string>
    <string name="address">Cím: </string>
    <string name="ownData">Saját adatok</string>
    <string name="myappointments">Időpontjaim</string>
    <string name="cancel">Mégsem</string>
    <string name="save">Mentés</string>
    <string name="logout">Kijelentkezés</string>
    <string name="editprofile">Profil szerkesztése</string>
</resources>